fix: prevent shifting of cards

--- a/src/components/Card/index.css
+++ b/src/components/Card/index.css
@@ -1,4 +1,4 @@
-.container-card{
+.container-card {
     height: 200px;
     width: 450px;
     border: 2px solid red;
@@ -6,34 +6,32 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    display: none;
     visibility: hidden;
-}
-
-.flipped-card{
+  }
+  
+  .flipped-card {
     height: 200px;
     width: 450px;
     border: 2px solid rgb(174, 166, 166);
+    border-radius: 15px;
+    background-color: rgb(96, 96, 96);
     margin-top: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.main-container{
-    border: 2px solid rgb(58, 52, 52);
-    gap: 20px;
-}
-
-.card{
+  }
+  
+  
+  .card {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     background-color: black;
     color: white;
-}
-
-.modal {
+    padding-bottom: 20px;
+  }
+  
+  .modal {
     position: fixed;
     top: 0;
     left: 0;
@@ -43,13 +41,26 @@
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.modal-content {
+  }
+  
+  .modal-content {
     background: rgb(111, 108, 108);
     padding: 20px;
     border-radius: 5px;
     text-align: center;
     height: 250px;
     width: 450px;
-}
+  }
+
+  
+  .columns {
+    display: flex;
+    justify-content: space-around;
+  }
+  
+  .column {
+    flex: 1;
+    margin: 0 10px;
+    text-align: center;
+  }
+    
